GNOME Bugzilla – Bug 788704
Plug a memory leak in rtsp-client.c
Last modified: 2017-10-09 18:40:33 UTC
The hash table priv->pipelined_requests is not unref:ed in the finalize funktion. Verify by running unit tets in valgrind.
Created attachment 361172 [details] [review] Makes sure the hash table pipelined_requests is unref:ed in the finalize function